<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Strings related to login -->
    <string name="prompt_email" tools:keep="@string/prompt_email">Email</string>
    <string name="prompt_password" tools:keep="@string/prompt_password">Password</string>
    <string name="action_sign_in" tools:keep="@string/action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short" tools:keep="@string/action_sign_in_short">Sign in</string>
    <string name="welcome" tools:keep="@string/welcome">"Welcome!"</string>
    <string name="invalid_username" tools:keep="@string/invalid_username">Not a valid username</string>
    <string name="invalid_password" tools:keep="@string/invalid_password">Password must be more than 5 characters</string>
    <string name="login_failed" tools:keep="@string/login_failed">"Login failed"</string>

    <string name="password1" tools:keep="@string/password1">password1</string>
    <string name="register_account" tools:keep="@string/register_account">register account</string>
    <string name="email_for_new_account">email for new account</string>
    <string name="_password_">password</string>
    <string name="email_login">email_login</string>
    <string name="login_account" tools:keep="@string/login_account">login account</string>
    <string name="login">login</string>
    <string name="account_login">account login</string>
    <string name="password2">password</string>
    <string name="register_new_account">register new account</string>
    <string name="register">register</string>
    <string name="default_text" tools:keep="@string/default_text">default text</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="engine_init_error">no load</string>
    <string name="hello_world">hi</string>
    <string name="action_settings">b</string>
    <string name="create_route">Create Route</string>
    <string name="app_name">Guidance</string>
    <string name="start_navi">Start Navigation</string>
    <string name="stop_navi">Stop Navigation</string>
    <string name="action_set_location_method">Set location method</string>
    <string name="title_select_location_method">Select location method</string>
    <string name="Directions">Directions</string>
    <!-- Location method names shown on dialog. -->
    <string-array name="locationMethodNames">
        <item name="locationMethodGps">GPS</item>
        <item name="locationMethodNetwork">Network</item>
        <item name="locationMethodGpsNetwork">Gps and Network</item>
        <item name="locationMethodGpsNetworkIndoor">GPS, Network and Indoor</item>
        <item name="locationMethodIndoor">Indoor</item>
    </string-array>

    <!-- Location method enumeration names. -->
    <string-array name="locationMethodValues">
        <item name="locationMethodGps">GPS</item>
        <item name="locationMethodNetwork">NETWORK</item>
        <item name="locationMethodGpsNetwork">GPS_NETWORK</item>
        <item name="locationMethodGpsNetworkIndoor">GPS_NETWORK_INDOOR</item>
        <item name="locationMethodIndoor">INDOOR</item>
    </string-array>

    <string name="action_set_indoor_mode">Set indoor mode</string>
    <string name="title_select_indoor_mode">Select indoor mode</string>
    <string name="waiting_for_position_fix">Waiting for position fix..</string>
    <string name="favorites">Favorites</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="calculate_route">Calculate Route</string>
    <string name="jb">...</string>
    <string name="jb2">...</string>
    <string name="jb3">...</string>
    <string name="time_till_arrival">Time till Arrival:</string>
    <string name="ll">not granted.</string>

    <!-- Indoor positioning mode names shown on dialog. -->
    <string-array name="indoorPositioningModeNames">
        <item name="indoorPositioningModeAutomatic">Automatic</item>
        <item name="indoorPositioningModeCommunity">Community</item>
        <item name="indoorPositioningModePrivate">Private</item>
        <item name="indoorPositioningModeDraft">Draft</item>
    </string-array>

    <!-- Indoor positioning mode enumeration names. -->
    <string-array name="indoorPositioningModeValues">
        <item name="indoorPositioningModeAutomatic">AUTOMATIC</item>
        <item name="indoorPositioningModeCommunity">COMMUNITY</item>
        <item name="indoorPositioningModePrivate">PRIVATE</item>
        <item name="indoorPositioningModeDraft">DRAFT</item>
    </string-array>

<<<<<<< HEAD
=======

    <!-- Drop down menu options for registering users -->
    <string-array name="dropDown">
        <item>Student</item>
        <item>Faculty</item>
    </string-array>



>>>>>>> Final-Michael
</resources>
